# FFNeuralNetwork

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: doxygen.conf  mainpage.dox
examples/: CMakeLists.txt  main_with_eigen.cpp  main_without_eigen.cpp
include/: CreateNeuralNet.h  NNConfig.h  helper_functions.h  matrixOperations.h
include/withEigen/: CreateNeuralNet.h  helper_functions.h  optimizers.h
include/withoutEigen/: CreateNeuralNet.h  optimizers.h
projects/: CMakeLists.txt  main.cpp  main_with_eigen.cpp
tests/: CMakeLists.txt  iris.csv
tests/withEigen/: TestCreateNeuralNetwork.cpp
